--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -7,6 +7,17 @@
     android:orientation="vertical">
 
 
+    <TextView
+        android:id="@+id/helloTtextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:textColor="@color/brown"
+        android:text="Hello, " />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -15,23 +26,23 @@
         android:gravity="center_vertical">
 
         <Button
-            android:id="@+id/button1"
+            android:id="@+id/uploadRecipeBtn"
             android:layout_width="180dp"
             android:layout_height="180dp"
             android:background="@drawable/menu_btn_shape"
             android:drawableBottom="@drawable/upload"
             android:layout_margin="10dp"
-            android:textSize="18sp"
-            android:text="@string/upload_image" />
+            android:textSize="20sp"
+            android:text="@string/upload_Recipe" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/addRecipeBtn"
             android:layout_width="180dp"
             android:layout_height="180dp"
-            android:background="@drawable/menu_btn_shape"
+            android:background="@color/brown"
             android:drawableBottom="@drawable/todolist"
             android:layout_margin="10dp"
-            android:textSize="18sp"
+            android:textSize="20sp"
             android:text="@string/add_recipe" />
     </LinearLayout>
 
@@ -42,28 +53,28 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/addIngredientsBtn"
             android:layout_width="180dp"
             android:layout_height="180dp"
             android:background="@drawable/menu_btn_shape"
             android:drawableBottom="@drawable/plus"
             android:layout_margin="10dp"
-            android:textSize="18sp"
+            android:textSize="20sp"
             android:text="@string/add_ingredients" />
 
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/addFavBtn"
             android:layout_width="180dp"
             android:layout_height="180dp"
             android:background="@drawable/menu_btn_shape"
             android:drawableBottom="@drawable/star"
             android:layout_margin="10dp"
-            android:textSize="18sp"
+            android:textSize="20sp"
             android:text="@string/save_favorites" />
     </LinearLayout>
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/allRecipesBtn"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="0.6"
