--- a/app/src/main/res/drawable/menu_btn_shape.xml
+++ b/app/src/main/res/drawable/menu_btn_shape.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+    android:shape="rectangle"
+    android:padding="30dp">
 
     <solid android:color="@color/light_yellow" />
-
+    <corners
+        android:bottomRightRadius="1dp"
+        android:bottomLeftRadius="1dp"
+        android:topLeftRadius="1dp"
+        android:topRightRadius="1dp" />
+    <stroke
+        android:width="3dp"
+        android:color="@color/brown"/>
 </shape>
