--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -25,24 +25,28 @@
         android:orientation="horizontal"
         android:gravity="center_vertical">
 
-        <Button
+        <android.widget.Button
             android:id="@+id/uploadRecipeBtn"
             android:layout_width="180dp"
             android:layout_height="180dp"
             android:background="@drawable/menu_btn_shape"
             android:drawableBottom="@drawable/upload"
             android:layout_margin="10dp"
+            android:textStyle="bold"
             android:textSize="20sp"
+            android:textColor="@color/brown"
             android:text="@string/upload_Recipe" />
 
-        <Button
+        <android.widget.Button
             android:id="@+id/addRecipeBtn"
             android:layout_width="180dp"
             android:layout_height="180dp"
-            android:background="@color/brown"
+            android:background="@drawable/menu_btn_shape"
             android:drawableBottom="@drawable/todolist"
             android:layout_margin="10dp"
+            android:textStyle="bold"
             android:textSize="20sp"
+            android:textColor="@color/brown"
             android:text="@string/add_recipe" />
     </LinearLayout>
 
@@ -52,28 +56,32 @@
         android:layout_weight="0.5"
         android:orientation="horizontal">
 
-        <Button
+        <android.widget.Button
             android:id="@+id/addIngredientsBtn"
             android:layout_width="180dp"
             android:layout_height="180dp"
             android:background="@drawable/menu_btn_shape"
             android:drawableBottom="@drawable/plus"
             android:layout_margin="10dp"
+            android:textStyle="bold"
             android:textSize="20sp"
+            android:textColor="@color/brown"
             android:text="@string/add_ingredients" />
 
-        <Button
+        <android.widget.Button
             android:id="@+id/addFavBtn"
             android:layout_width="180dp"
             android:layout_height="180dp"
             android:background="@drawable/menu_btn_shape"
             android:drawableBottom="@drawable/star"
             android:layout_margin="10dp"
+            android:textStyle="bold"
             android:textSize="20sp"
+            android:textColor="@color/brown"
             android:text="@string/save_favorites" />
     </LinearLayout>
 
-    <Button
+    <android.widget.Button
         android:id="@+id/allRecipesBtn"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -82,6 +90,8 @@
         android:drawableEnd="@drawable/arrow"
         android:layout_marginVertical="40dp"
         android:layout_marginHorizontal="10dp"
+        android:textStyle="bold"
         android:textSize="25sp"
+        android:textColor="@color/brown"
         android:text="To All Recipes" />
 </LinearLayout>
