--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="light_honey">#D7AF72</color>
     <color name="light_yellow">#EFDEC2</color>
     <color name="brown">#A8651E</color>
+    <color name="dark_brown">#593611</color>
 </resources>
