--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -3,7 +3,7 @@
     android:id="@+id/gridLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_honey2"
+    android:background="@color/light_yellow"
     android:orientation="vertical">
 
 
@@ -15,7 +15,7 @@
         android:layout_marginTop="10dp"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:textColor="@color/brown"
+        android:textColor="@color/dark_brown"
         android:text="Hello, " />
 
     <LinearLayout
