add ingredients page and Firebase fixes

--- a/app/src/main/res/layout/fragment_add_ingredient.xml
+++ b/app/src/main/res/layout/fragment_add_ingredient.xml
@@ -58,7 +58,7 @@
         android:background="@drawable/menu_btn_shape"
         android:textColor="@color/brown"
         android:textSize="16sp"
-        android:text="upload from gallery" />
+        android:text="Add Ingredient" />
 
 
     <ImageView
