--- a/app/src/main/res/navigation/navgraph.xml
+++ b/app/src/main/res/navigation/navgraph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navgraph"
-    app:startDestination="@id/mainMenuFragment">
+    app:startDestination="@id/addRecipeFragment">
 
     <fragment
         android:id="@+id/mainMenuFragment"
@@ -47,7 +47,11 @@
         android:id="@+id/addIngredientFragment"
         android:name="com.example.recipehive.fragments.AddIngredientFragment"
         android:label="fragment_add_ingredient"
-        tools:layout="@layout/fragment_add_ingredient" />
+        tools:layout="@layout/fragment_add_ingredient" >
+        <action
+            android:id="@+id/action_addIngredientFragment_to_mainMenuFragment"
+            app:destination="@id/mainMenuFragment" />
+    </fragment>
     <fragment
         android:id="@+id/addRecipeFragment"
         android:name="com.example.recipehive.fragments.AddRecipeFragment"
