--- a/app/src/main/res/layout/fragment_upload_recipe.xml
+++ b/app/src/main/res/layout/fragment_upload_recipe.xml
@@ -9,7 +9,7 @@
     android:background="@color/light_yellow">
 
     <TextView
-        android:id="@+id/AddIngreadientTitleView"
+        android:id="@+id/AddRecipeTitleView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center|bottom"
