--- a/app/src/main/res/layout/ingredient_to_recipe_layout.xml
+++ b/app/src/main/res/layout/ingredient_to_recipe_layout.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ingItemCardView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:backgroundTint="@color/light_yellow">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -9,31 +11,34 @@
         android:orientation="horizontal"
         android:backgroundTint="@color/light_yellow">
 
-        <EditText
-            android:id="@+id/amountEditText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
-            android:inputType="text"
-            android:hint="Amount" />
-
-        <AutoCompleteTextView
-            android:id="@+id/autoCompleteIngredient"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="Enter ingredient"
-            android:completionThreshold="1" />
-
 
         <ImageView
-            android:id="@+id/deleteIngBtn"
-            android:layout_width="35dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="bottom"
+            android:src="@drawable/bullet" />
+
+        <TextView
+            android:id="@+id/amountText"
+            android:layout_width="wrap_content"
             android:layout_height="35dp"
-            android:layout_gravity="right|top"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            android:src="@drawable/baseline_close_24" />
+            android:layout_weight="1"
+            android:layout_gravity="bottom"
+            android:gravity="bottom"
+            android:ems="10"
+            android:textColor="@color/dark_brown"
+            android:text="Amount" />
+
+        <TextView
+            android:id="@+id/ingredientText"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:layout_weight="1"
+            android:layout_gravity="bottom"
+            android:gravity="bottom"
+            android:textColor="@color/dark_brown"
+            android:text="Enter ingredient"
+            android:completionThreshold="1" />
+
     </LinearLayout>
 </androidx.cardview.widget.CardView>
