--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="light_yellow">#EFDEC2</color>
     <color name="brown">#A8651E</color>
     <color name="dark_brown">#593611</color>
+    <color name="red">#FF0000</color>
 </resources>
