--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -35,7 +35,7 @@
             android:textStyle="bold"
             android:textSize="20sp"
             android:textColor="@color/brown"
-            android:text="@string/upload_Recipe" />
+            android:text="Upload Recipe Image" />
 
         <android.widget.Button
             android:id="@+id/addRecipeBtn"
@@ -47,7 +47,7 @@
             android:textStyle="bold"
             android:textSize="20sp"
             android:textColor="@color/brown"
-            android:text="@string/add_recipe" />
+            android:text="Add Recipe" />
     </LinearLayout>
 
     <LinearLayout
@@ -66,7 +66,7 @@
             android:textStyle="bold"
             android:textSize="20sp"
             android:textColor="@color/brown"
-            android:text="@string/add_ingredients" />
+            android:text="Add Ingredients" />
 
         <android.widget.Button
             android:id="@+id/addFavBtn"
@@ -78,7 +78,7 @@
             android:textStyle="bold"
             android:textSize="20sp"
             android:textColor="@color/brown"
-            android:text="@string/save_favorites" />
+            android:text="Save Favorites" />
     </LinearLayout>
 
     <android.widget.Button
