--- a/app/src/main/res/layout/ingredient_to_recipe_layout.xml
+++ b/app/src/main/res/layout/ingredient_to_recipe_layout.xml
@@ -2,8 +2,8 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ingItemCardView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:backgroundTint="@color/light_yellow">
+    android:layout_height="wrap_content"
+    android:backgroundTint="@color/light_honey2">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,6 +27,7 @@
             android:gravity="bottom"
             android:ems="10"
             android:textColor="@color/dark_brown"
+            android:textSize="14sp"
             android:text="Amount" />
 
         <TextView
@@ -38,6 +39,7 @@
             android:gravity="bottom"
             android:textColor="@color/dark_brown"
             android:text="Enter ingredient"
+            android:textSize="14sp"
             android:completionThreshold="1" />
 
     </LinearLayout>
