--- a/app/src/main/res/layout/url_recipe_dialog.xml
+++ b/app/src/main/res/layout/url_recipe_dialog.xml
@@ -12,20 +12,20 @@
         android:layout_gravity="center"
         app:cardCornerRadius="25dp">
 
+        <ImageView
+            android:id="@+id/buttonClose"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_gravity="right|top"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/baseline_close_24" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/light_honey2"
             android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/buttonClose"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_gravity="right|top"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="10dp"
-                android:src="@drawable/baseline_close_24" />
 
             <TextView
                 android:id="@+id/recipeNameTextView"
@@ -35,7 +35,8 @@
                 android:text="recipe name"
                 android:textColor="@color/brown"
                 android:textDirection="ltr"
-                android:textSize="34sp"
+                android:textSize="30sp"
+                android:padding="5dp"
                 android:textStyle="bold" />
 
             <TextView
@@ -44,7 +45,8 @@
                 android:layout_height="wrap_content"
                 android:text="recipe type"
                 android:textColor="@color/brown"
-                android:textSize="26sp" />
+                android:padding="5dp"
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/urlTextView"
